Fix header image
Fixes an issue where the width of the header image was being squished on mobile, now object-fit is used to better display the image in the container.

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -206,30 +206,7 @@ header
 
   @media only screen and (max-width: $break-large)
     margin: 0 0 40px
-    padding: 100px 15px 40px
-
-  a.store_header
-    color: $header-color
-    display: inline-block
-    font-size: 44px
-
-    &:hover, &:active
-      color: $hover-color
-
-    &.text
-      display: inline-block
-      line-height: 1.2em
-      text-decoration: none
-      white-space: normal
-      word-break: break-word
-
-    img
-      height: 100%
-      max-height: 140px
-      max-width: 100%
-
-      @media screen and (max-width: $break-small)
-        max-height: 100px
+    padding: 100px 20px 40px
 
   .inner-wrapper
     padding: 0 20px
@@ -237,6 +214,28 @@ header
 
     @media screen and (max-width: $break-medium)
       +justify-content(center)
+      padding: 0
+
+.store_header
+  color: $header-color
+  display: inline-block
+  font-size: 44px
+
+  &:hover, &:active
+    color: $hover-color
+
+  &.text
+    display: inline-block
+    line-height: 1.2em
+    text-decoration: none
+    white-space: normal
+    word-break: break-word
+
+.store-image
+  display: block
+  max-height: 140px
+  object-fit: contain
+  width: 100%
 
 .hidden
   display: none
